assign1/tests/type-checking/bad/invalid-int.c
#include "FenneC.h"

int main() {
  int i = -2147483649;
  int d = 2147483648;
  return 439484983498349;
}